# kafka4beginners-stephane-maarek

./: .gitignore  KAFKA_COMMANDS.md  LICENSE  README.md  pyproject.toml
kafka4beginners_stephane_maarek/kafka_basics/: consumer_demo.py  consumer_demo_cooperative.py  consumer_demo_with_shutdown.py  producer_demo.py  producer_demo_keys.py  producer_demo_with_callbacks.py
