[tool.poetry]
name = "kafka4beginners-stephane-maarek"
version = "0.1.0"
description = ""
authors = ["alex carvalho <alex.carvaho.data@gmail.com>"]
readme = "README.md"
packages = [{include = "kafka4beginners_stephane_maarek"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
